--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../img/background.jpg);
+  background: url(../img/CCSS_background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: 40%;
@@ -8,6 +8,7 @@ body {
 
 div.material-table {
   padding: 0;
+  background-color: rgba(255, 255, 255, 0.97);
 }
 
 div.material-table .hiddensearch {
